# PolishGovernmentAnalysis

./: .gitignore  README.md  pyproject.toml
src/notebooks/: eda.ipynb  graphs.ipynb
src/processing/: __init__.py  process_votings.py  votings.py
src/scrapper/: fetch.py  helpers.py  main.py  validate.py  write.py
src/utils/config/: __init__.py  clubs.py  constants.py
src/utils/graph/layout/: __init__.py  colors.py  layout.py  plot.py
src/utils/logger/: logger.py
src/utils/models/: __init__.py  member.py  proceeding.py  vote.py  voting.py  voting_identifiers.py
